--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
 version: "3.9"
 services:
-
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
-    restart: always
+    restart: alwaysœ
+    volumes:
+      - mysql_db_data_container:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: example
 
@@ -30,9 +31,10 @@ services:
     environment:
       - PYTHONUNBUFFERED=TRUE
       - WORKER_SIZE=1
-    expose:
-      - 5000
+    ports:
+      - 443:5000
     networks:
+      - frontend
       - backend
 
   redis:
@@ -64,10 +66,13 @@ services:
       - backend
 
   exploit-db:
-    image: princechrismc/go-exploitdb
+    build:
+      context: .
+      dockerfile: ./go-exploitdb/Dockerfile
     hostname: exploitDB
-    port:
-      - 1326:1326
+    command: server
+    expose:
+      - 1326
     networks:
       - frontend
       - backend
