--- a/vuln-scanner/package.json
+++ b/vuln-scanner/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "@prisma/client": "^3.11.1"
   }
 }
