--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,20 @@ services:
       - "mysql_db_data_container:/var/lib/mysql"
     environment:
       MYSQL_ROOT_PASSWORD: example
+    networks:
+      backend:
+        ipv4_address: 10.21.22.4
 
   adminer:
     image: adminer
     restart: always
-    expose:
-      - 6379
+    ports:
+      - 5050:8080
+    networks:
+      frontend:
+        ipv4_address: 10.20.21.5
+      backend:
+        ipv4_address: 10.21.22.5
 
   cve_search:
     image: cve_search
@@ -31,11 +39,11 @@ services:
     environment:
       - PYTHONUNBUFFERED=TRUE
       - WORKER_SIZE=1
-    ports:
-      - 443:5000
+    expose:
+      - 5000
     networks:
-      - frontend
-      - backend
+      backend:
+        ipv4_address: 10.21.22.6
 
   redis:
     image: cve_search-redis
@@ -49,7 +57,8 @@ services:
     expose:
       - 6379
     networks:
-      - backend
+      backend:
+        ipv4_address: 10.21.22.7
 
   mongo:
     image: cve_search-mongo
@@ -63,21 +72,48 @@ services:
     expose:
       - 27017
     networks:
-      - backend
+      backend:
+        ipv4_address: 10.21.22.8
 
   exploit-db:
     build:
       context: ./go-exploitdb
       dockerfile: Dockerfile
     hostname: exploitDB
+    restart: always
     command: server
     expose:
       - 1326
     networks:
-      - frontend
-      - backend
+      backend:
+        ipv4_address: 10.21.22.9
+  
+  vuln-scanner:
+    hostname: vulnScanner
+    restart: always
+    build:
+      context: ./vuln-scanner
+      dockerfile: Dockerfile
+    ports:
+      - 8080:5050
+    networks:
+      frontend:
+        ipv4_address: 10.20.21.10
+      backend:
+        ipv4_address: 10.21.22.10
+
 volumes:
   mysql_db_data_container:
 networks:
   frontend:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: 10.20.21.0/24
+          gateway: 10.20.21.1
   backend:
+    driver: bridge
+    ipam:
+     config:
+       - subnet: 10.21.22.0/24
+         gateway: 10.21.22.1
