react and node working correctly with https

--- a/vuln-scanner/backend/Dockerfile
+++ b/vuln-scanner/backend/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update
 RUN apt-get -y install python3 nmap
 WORKDIR /app
 COPY . .
+RUN npm install nodemon -g
 RUN npm install --production
 EXPOSE 3000
-CMD ["node", "app.js"]
+CMD ["nodemon", "app.js"]
