Added .env generation and build for the frontend

--- a/vuln-scanner/frontend/Dockerfile
+++ b/vuln-scanner/frontend/Dockerfile
@@ -3,7 +3,9 @@ FROM node:alpine
 WORKDIR /app
 COPY . .
 RUN npm install --production
+RUN npm run build
+RUN npm install -g serve
 EXPOSE 443
 ENV PORT=443
 ENV HTTPS=true
-CMD ["npm", "start"]
+CMD ["serve", "-s", "build", "--ssl-cert", "./cert.pem", "--ssl-key", "./key.pem"]
