--- a/vuln-scanner/backend/Dockerfile
+++ b/vuln-scanner/backend/Dockerfile
@@ -4,7 +4,6 @@ RUN apt-get update
 RUN apt-get -y install python3 nmap
 WORKDIR /app
 COPY . .
-RUN npm install nodemon -g
 RUN npm install --production
 EXPOSE 3000
-CMD ["nodemon", "app.js"]
+CMD ["npm", "start"]
