--- a/vuln-scanner/backend/package.json
+++ b/vuln-scanner/backend/package.json
@@ -1,11 +1,12 @@
 {
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": " PORT=8080  node app.js",
     "dev": "nodemon app.js"
   },
   "dependencies": {
     "express": "^4.18.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.15"
   }
 }
