--- a/vuln-scanner/backend/package.json
+++ b/vuln-scanner/backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "express": "^4.18.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "redis": "1.0"
   }
 }
