--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,8 @@ services:
     environment:
       - PYTHONUNBUFFERED=TRUE
       - WORKER_SIZE=1
-    expose:
-      - 5000
+    ports:
+      - 5000:5000
     networks:
       backend:
         ipv4_address: 10.21.22.6
@@ -54,8 +54,8 @@ services:
       dockerfile: docker/images/redis/dockerfile-redis
     volumes:
       - "./CVE-Search-Docker/.cve_search_data/cve_search_redis:/data"
-    expose:
-      - 6379
+    ports:
+      - 6379:6379
     networks:
       backend:
         ipv4_address: 10.21.22.7
@@ -69,8 +69,8 @@ services:
       dockerfile: docker/images/mongodb/dockerfile-mongo
     volumes:
       - "./CVE-Search-Docker/.cve_search_data/cve_search_mongodb:/data/db"
-    expose:
-      - 27017
+    ports:
+      - 27017:27017
     networks:
       backend:
         ipv4_address: 10.21.22.8
