--- a/vuln-scanner/backend/package.json
+++ b/vuln-scanner/backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.0",
+    "mongodb": "^4.8.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
     "redis": "1.0"
