--- a/vuln-scanner/backend/package.json
+++ b/vuln-scanner/backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.0",
+    "fast-csv": "^4.3.6",
     "fast-xml-parser": "^4.0.9",
     "mongodb": "^4.8.0",
     "mysql": "^2.18.1",
