--- a/vuln-scanner/frontend/package.json
+++ b/vuln-scanner/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
+    "file-saver": "^2.0.5",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-icons": "^1.8.4",
